Move explore avatar to avoid hamburger menu overlap
The fashion avatar in creature world was positioned bottom-right,
directly behind the fixed-position hamburger menu button. Moved
avatar to bottom-left (left:90px) to clear both the menu button
and the back-to-locations button.

--- a/css/creatures.css
+++ b/css/creatures.css
@@ -121,7 +121,7 @@
 .explore-avatar {
   position: absolute;
   bottom: 8px;
-  right: 16px;
+  left: 90px;
   width: 64px;
   height: 108px;
   z-index: 4;
